--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,13 @@
 {
     "name": "Dad Jokes",
     "version": "1.1.1",
-    "manifest_version": 3
+    "manifest_version": 3,
+    "action": {
+        "default_popup": "popup.html",
+        "default_icon": "logo.png"
+    },
+    "icons": {
+        "256": "logo.png"
+    },
+    "permissions": ["activeTab"]
 }
